# FEUP-AED-PROJ2

./: CMakeLists.txt  README.md  gephi  main.cpp
docs/: Doxyfile
gephi-graphs/: least_distance_300.gephi
include/: config.h  dataset.h  direction.h  harversine.h  interact.h  min_heap.h  names.h  pathfinding.h  ui.h
include/graphs/: least_bus_changes.h  least_distance.h  least_money_spent.h  least_stops.h
src/: dataset.cpp  harversine.cpp  interact.cpp  names.cpp  pathfinding.cpp  ui.cpp
src/graphs/: least_bus_changes.cpp  least_distance.cpp  least_money_spent.cpp  least_stops.cpp
